--- a/src/containers/adminDashboard/index.module.css
+++ b/src/containers/adminDashboard/index.module.css
@@ -52,7 +52,7 @@
 
 .menuBar > ul > li > span {
   color: #582fff;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 0.9rem;
 }
 
@@ -68,14 +68,6 @@
   display: flex;
   flex-direction: column;
   margin: 26px 0 0 20px;
-}
-
-.contentWrap > div:first-child {
-  margin-left: 20px;
-}
-
-.contentWrap > div:last-child {
-  margin-right: 20px;
 }
 
 .countCardWithColorArea {
